fix error comparing a struct vs an uno prop containing a struct fdo#42819

hack to fix the scenario where sometimes we get "Object required" error when comparing an uno property containing a struct with another struct ( if that property is "MAYBEVOID" )